[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claudeflare-python-mcp"
version = "1.0.0"
description = "Cloudflare 域名配置与常用 API 的 MCP 服务器"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastmcp>=2.0.0",
    "cloudflare>=3.0",
    "httpx>=0.27.0",
    "socksio>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "mypy>=1.10.0",
]

[project.scripts]
claudeflare-python-mcp = "claudeflare_mcp.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["claudeflare_mcp"]

[tool.black]
line-length = 100
target-version = ["py313"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unreachable = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
